--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-AUTH0_SECRET='use [openssl rand -hex 32] to generate a 32 bytes value'
+AUTH0_SECRET='IyISIWvC17vRZMLvRmJm!77nXEUcLRVm'
 AUTH0_BASE_URL='http://localhost:3000'
 AUTH0_ISSUER_BASE_URL='https://ecanteen.au.auth0.com'
 AUTH0_CLIENT_ID='BdeABCEI5SO16oxkJ2NbvHvEdhoNnqNu'
