--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "stripe": "^8.222.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "use-shopping-cart": "^3.1.2"
   },
   "devDependencies": {
     "eslint": "8.14.0",
